kiki/src/examples/should_fail/clash_nonterminal_nonterminal.kiki
start Lorem

struct Lorem

struct Lorem

terminal Foo {
    $Ident: String
}
